<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nfcoperator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.willy.nfc.nfcoperator.NFCOperatorActivity">

    <TextView
        android:id="@+id/tv_check_num"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_1"
        android:textSize="@dimen/text_size_1"
        android:gravity="center_vertical"
        android:text="@string/string_check_number"
        android:textColor="@android:color/black"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_1"
        android:layout_toRightOf="@id/tv_check_num"
        android:layout_marginLeft="@dimen/margin_1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/check_num"
            android:layout_width="@dimen/width_1"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_2"/>

        <View
            android:layout_width="@dimen/width_1"
            android:layout_height="1dp"
            android:layout_below="@id/check_num"
            android:layout_marginTop="@dimen/margin_2"
            android:background="@android:color/darker_gray"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_serial_num"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_1"
        android:layout_below="@id/tv_check_num"
        android:textSize="@dimen/text_size_1"
        android:gravity="center_vertical"
        android:text="@string/string_serial_number"
        android:textColor="@android:color/black"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_1"
        android:layout_toRightOf="@id/tv_serial_num"
        android:layout_below="@id/tv_check_num"
        android:layout_marginLeft="@dimen/margin_1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/serial_num"
            android:layout_width="@dimen/width_1"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_2"/>

        <View
            android:layout_width="@dimen/width_1"
            android:layout_height="1dp"
            android:layout_below="@id/serial_num"
            android:layout_marginTop="@dimen/margin_2"
            android:background="@android:color/darker_gray"/>
    </RelativeLayout>

    <Button
        android:id="@+id/write_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/common_confirm_button_bg"
        android:textAllCaps="false"
        android:text="@string/string_button_write"/>

    <EditText
        android:id="@+id/test_edit_serial_num"
        android:layout_width="@dimen/width_1"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:hint="@string/string_enter_serial_number"/>

    <EditText
        android:id="@+id/test_edit_check_num"
        android:layout_width="@dimen/width_1"
        android:layout_height="wrap_content"
        android:layout_above="@id/test_edit_serial_num"
        android:hint="@string/string_enter_check_number"/>
</RelativeLayout>
